--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ html {
 
 
 body {
-    background-image: url(images/background.png);
+    background-image: url(images/background2.png);
     padding: 0 10%;
     display: grid;
     grid-area: coluna;
@@ -35,8 +35,8 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: center;
-    margin-top: 11%;
+    margin-top: -5%;
+    margin-left: 7%;
     width: 100%;
     height: 100vh;
 }
@@ -45,7 +45,7 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-top: 10%;
+    margin-top: -3%;
     margin-left: -15%;
     width: 130%;
     height: 130vh;
@@ -62,6 +62,7 @@ p {
 
 .iframevideo {
     margin: 5%;
+    margin-top: -5%;
     height: 100%;
   }
 
