--- a/carrossel.css
+++ b/carrossel.css
@@ -62,7 +62,7 @@
     --swiper-theme-color:#007aff
   }
   .swiper {
-    margin-left:auto;/* era auto*/
+    margin-left:auto;
     margin-right:auto;
     position:relative;
     overflow:hidden;
@@ -300,7 +300,7 @@
         width:var(--swiper-pagination-bullet-width,var(--swiper-pagination-bullet-size,8px));
         height:var(--swiper-pagination-bullet-height,var(--swiper-pagination-bullet-size,8px));display:inline-block;
         border-radius:50%;
-        background:var(--swiper-pagination-bullet-inactive-color,#000);
+        background:var(--swiper-pagination-bullet-inactive-color,#ffffff);
         opacity:var(--swiper-pagination-bullet-inactive-opacity, .2)
       }
         button.swiper-pagination-bullet{
