--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,14 @@ p {
     color: white;
 }
 
+html, body, span, p, form, img, a, ul, ol, li, table, tr, td, div{
+    margin: 0;
+    padding: 0; 
+    border:none; 
+    outline:none;
+    list-style-type:none;
+ }
+ 
 .iframevideo {
     margin: 5%;
     margin-top: -5%;
