--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,9 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-top: -5%;
-    margin-left: 7%;
-    width: 100%;
+    margin-top: 0%;
+    margin-left: 15%;
+    width: 70%;
     height: 100vh;
 }
 
@@ -45,10 +45,8 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-top: -3%;
-    margin-left: -15%;
-    width: 130%;
-    height: 130vh;
+    width: 100%;
+    height: 100vh;
 }
 
 .home, .pagina {
@@ -61,9 +59,10 @@ p {
 }
 
 .iframevideo {
-    margin: 5%;
-    margin-top: -5%;
-    height: 100%;
+    margin: 3%;
+    aspect-ratio: 9/16;
+    margin-left: -20%;
+    height: 92%;
   }
 
 button {
@@ -108,16 +107,16 @@ button {
     text-shadow: 0.04408389em 0.06067627em 0.0125em rgba(0, 0, 0, 0.300000);
 }
 
-.video,
 .media-links {
-    margin: 5%;
-    margin-left: -15%;
-    margin-right: 27%;
+    margin: 11%;
+    margin-left: 5%;
 }
 
 #descricao {
-    width: 90%;
-    align-items: center;
+    width: 80%;
+    margin-top: 2%;
+    margin-left: 10%;
+   
 }
 
 .social-links {
@@ -143,8 +142,9 @@ button {
     flex-direction: column;
     align-items: center;
     #logo-conexao-total {
-        width: 62%;
-        margin-left: 13%;
+        margin-top: 3%;
+        width: 50%;
+        margin-left: 25%;
        }
 }
 
