--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    height: 100vh;
+    height: 108vh;
 }
 
 .home, .pagina {
@@ -59,9 +59,9 @@ p {
 }
 
 .iframevideo {
-    margin: 3%;
+    margin: 5%;
     aspect-ratio: 9/16;
-    margin-left: -20%;
+    margin-left: -25%;
     height: 92%;
   }
 
@@ -77,6 +77,13 @@ button {
 
 .link {
     cursor: pointer;
+}
+
+.esquerda {
+    display: flex;
+    flex-direction: row;
+    margin-top: 1%;
+    margin-left: 4%;
 }
 
 .home,
@@ -96,6 +103,7 @@ button {
         line-height:0.86390503em;
         text-transform:none;
         letter-spacing:-0.05em;
+
 }
 
 #descricao {
@@ -108,24 +116,24 @@ button {
 }
 
 .media-links {
-    margin: 11%;
-    margin-left: 5%;
+    margin-top: 6%;
+    margin-left: 7%;
 }
 
 #descricao {
     width: 80%;
-    margin-top: 2%;
-    margin-left: 10%;
-   
+    margin-top: 2%;  
 }
 
 .social-links {
-    margin-left: 18%;
+    margin-top: 3%;
+    margin-left: 3%;
     display: flex;
     img {
-        width: 10%;
-        height: 80%;
+        width: 8%;
+        height: 100%;
         margin-right: 5%;
+        margin-left: 3%;
     }
 }
 
@@ -143,8 +151,8 @@ button {
     align-items: center;
     #logo-conexao-total {
         margin-top: 3%;
-        width: 50%;
-        margin-left: 25%;
+        width: 55%;
+        margin-left: 12%;
        }
 }
 
