--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,31 @@ html {
     min-height: 100%;
   }
 
-@media screen and (max-width: 768px) {
-    /* regras CSS para telas menores que 768px */
-}
+  body {
+    font-family: sans-serif;
+  }
+  
+  h1 {
+    font-size: 2em;
+  }
+  
+  p {
+    font-size: 1em;
+  }
+  
+  @media screen and (max-width: 768px) {
+    body {
+      font-size: 1.5em;
+    }
+  
+    h1 {
+      font-size: 1.5em;
+    }
+  
+    p {
+      font-size: 1em;
+    }
+  }
 
 @media screen and (max-width: 768px) {
     .container {
@@ -26,11 +48,6 @@ html {
     }
 }
   
-@media screen and (min-width: 768px) {
-    .element {
-      display: grid;
-    }
-}
 
 @font-face {
     font-family: fonte-principal;
