--- a/contatos.css
+++ b/contatos.css
@@ -180,7 +180,7 @@ p {
 
         img {
             width: 80%;
-            padding-bottom: 60%;
+            padding-bottom: 33px;
             box-sizing: border-box;
         }
     }
