--- a/contatos.css
+++ b/contatos.css
@@ -66,7 +66,7 @@ p {
             z-index: 7;
             margin-left: 6.2%;
             margin-top: 3%;
-
+            box-sizing: border-box;
             img {
                 width: 10%;
                 height: 80%;
