--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@ button {
     display: flex;
     margin-top: 6%;
     margin-left: 10%;
+    box-sizing: border-box;
     img {
         width: 8%;
         padding-left: 4%;
@@ -186,6 +187,7 @@ button {
     flex-direction: column;
     margin-top: 6%;
     margin-left: 22%;
+    box-sizing: border-box;
     img {
         width: 90%;
         padding-bottom: 100%;
