--- a/contatos.css
+++ b/contatos.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-    background-image: url(images/FUNDO_Fim.png);
+    background-image: url(images/fundoFim.png);
     background-size: cover;
     padding: 0 5%;
     display: flex;
@@ -30,6 +30,18 @@ body {
 
 p {
     color: #ffffff;
+}
+
+button {
+    min-width: 35%;
+    z-index: 8;
+    background-color: rgb(50, 64, 71);
+    border-color: rgb(253, 236, 11);
+    border-width: 3px;
+    font-family: fonte-principal;
+    line-height: 3.5em;
+    color: white;
+    margin-left: 4.2%;
 }
 
 .link {
@@ -58,32 +70,19 @@ p {
             width: 62%;
             margin-left: 15%;
         }
-
+        
         .social-links {
             display: flex;
-            justify-content: center;
-            align-items: center;
             z-index: 7;
-            margin-left: 6.2%;
+            margin-left: auto;
             margin-top: 3%;
-            box-sizing: border-box;
+            width: 100%;
+            justify-content: space-evenly;
+            align-items: center;
             img {
-                width: 10%;
-                height: 80%;
-                margin-left: 2%;
+                width: 8%;
             }
 
-            button {
-                min-width: 35%;
-                z-index: 8;
-                background-color: rgb(50, 64, 71);
-                border-color: rgb(253, 236, 11);
-                border-width: 3px;
-                font-family: fonte-principal;
-                line-height: 3.5em;
-                color: white;
-                margin-left: 4.2%;
-            }
         }
     }
 }
@@ -174,13 +173,12 @@ p {
     .media-links {
         display: flex;
         flex-direction: column;
+        align-items: stretch;
         position: absolute;
         z-index: 6;
         margin-left: 78%;
-        box-sizing: border-box;
         img {
             width: 80%;
-            padding-bottom: 33px;
         }
     }
 }
