--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,28 @@ html {
     min-height: 100%;
   }
 
+  @media (max-width: 600px) {
+    font-size: 12px;
+
+    img {
+        width: 50%;
+    }
+
+    .elemento-oculto {
+        display: none;
+    }
+
+    coluna1 {
+        width: 100%;
+    }
+}
+
+@media (orientation: portrait) {
+    coluna1 {
+        width: 100%;
+    }
+}
+
   body {
     font-family: sans-serif;
   }
