--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,12 @@ html {
     height: 100%;
     min-height: 100%;
   }
-
+  @media (max-width: 600px) {
+    .coluna2 {
+        position: absolute;
+        bottom: 0;
+    }
+}
   @media (max-width: 600px) {
 
     img {
@@ -15,6 +20,11 @@ html {
 
     .esquerda, .meio, .direita  {
         width: 50%;
+    }
+
+    .iframevideo {
+        position: absolute;
+        bottom: 0;
     }
 }
 
