--- a/styles.css
+++ b/styles.css
@@ -13,27 +13,32 @@ html {
 
     .uma-div {
         width: 253%;
-        transform: translateY(-210%);
+        transform: translateY(-105%);
         position: absolute;
         bottom: 0;
-       
+        #logo-conexao-total {
+            margin-left: -9%;
+            padding-bottom: 5%;
+        }
     }
 
     .social-links {
         display: flex;
-        width: 60%;
-        padding-top: 132% ;
+        padding-top: 270% ;
         padding-left: 5%;
         position: absolute;
         bottom: 1;
         justify-content: space-evenly;
-        transform: translateY(-50%);
+    }
+    
+    .instagramLink {
+        margin-right: 10%;
     }
 
     .media-links {
         width: 8%;
-        transform: translateY(-270%);
-        padding-left: 8%;
+        transform: translateY(-172%);
+        padding-left: 0%;
         position: absolute;
         bottom: 0;
     }
@@ -41,7 +46,7 @@ html {
     .iframevideo {
         width: 85%;
         height: 85%;
-        transform: translateY(46%);
+        transform: translateY(100%);
         position: absolute;
         bottom: 2;
     }
