--- a/contatos.css
+++ b/contatos.css
@@ -6,8 +6,10 @@ html {
 }
 
 @media (orientation: portrait) {
-    
-    .esquerda, .meio, .direita {
+
+    .esquerda,
+    .meio,
+    .direita {
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -20,42 +22,38 @@ html {
         bottom: 0;
     }
 
-    
-    .sobrepostos {
-        display: flex;
-        flex-direction: row;
-        width: 120%;
-        transform: translateY(150%);
-        position: absolute;
-        bottom: 1;
-        #toque, #parte-do-show{
-            padding-top: 90%;
-            transform: translateX(-32%);
-        }
-    }
-
-
     .meio {
         display: flex;
         flex-direction: column;
         transform: translateX(-63%);
         position: absolute;
-        bottom: 2;
+        bottom: 1;
+    }
+
+    .direita {
+        display: flex;
+        padding-top: 90%;
+        .sobrepostos {
+            width: 200%;
+            transform: translateX(-46%);
+           
+            position: absolute;
+            bottom: 2;
+        }
     }
 
     .social-links {
         display: flex;
-        padding-top: 260% ;
+        padding-top: 290%;
         padding-left: 5%;
         position: absolute;
         bottom: 3;
         justify-content: space-evenly;
         transform: translateY(-60%);
     }
-    
+
     .media-links {
-        width: 15%;
-        transform: translateY(25%);
+        transform: translateY(0%);
         padding-left: 0%;
         position: absolute;
         bottom: 4;
@@ -70,7 +68,7 @@ html {
 
     .elemento-oculto {
         display: none;
-    }   
+    }
 }
 
 @font-face {
@@ -138,7 +136,7 @@ button {
             width: 62%;
             margin-left: 15%;
         }
-        
+
         .social-links {
             display: flex;
             z-index: 7;
@@ -147,6 +145,7 @@ button {
             width: 100%;
             justify-content: space-evenly;
             align-items: center;
+
             img {
                 width: 8%;
             }
@@ -245,6 +244,7 @@ button {
         position: absolute;
         z-index: 6;
         margin-left: 78%;
+
         img {
             width: 80%;
         }
